@@ -3,13 +3,14 @@ package com.practicasDeDesarrollo.backend.service;
 import com.practicasDeDesarrollo.backend.dto.response.AuthResponse;
 import com.practicasDeDesarrollo.backend.dto.request.CreateUsuarioRequest;
 import com.practicasDeDesarrollo.backend.dto.request.UpdateUsuarioRequest;
+import com.practicasDeDesarrollo.backend.dto.response.ResenaResponse;
 import com.practicasDeDesarrollo.backend.dto.response.UsuarioResponse;
-import com.practicasDeDesarrollo.backend.dto.response.PropiedadResponse;
-import com.practicasDeDesarrollo.backend.entity.Propiedad;
+import com.practicasDeDesarrollo.backend.dto.response.PublicacionResponse;
+import com.practicasDeDesarrollo.backend.entity.Publicacion;
 import com.practicasDeDesarrollo.backend.entity.Usuario;
 import com.practicasDeDesarrollo.backend.entity.enums.RolUsuario;
 import com.practicasDeDesarrollo.backend.repository.UsuarioRepository;
-import com.practicasDeDesarrollo.backend.repository.PropiedadRepository;
+import com.practicasDeDesarrollo.backend.repository.PublicacionRepository;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.jspecify.annotations.NonNull;
@@ -29,8 +30,8 @@ import java.util.stream.Collectors;
 public class UsuarioService {
 
     private final UsuarioRepository usuarioRepository;
-    private final PropiedadRepository propiedadRepository;
-    private final PropiedadService propiedadService;
+    private final PublicacionRepository publicacionRepository;
+    private final PublicacionService publicacionService;
     private final PasswordEncoder passwordEncoder;
     private final AuthenticationManager authenticationManager;
     private final JwtService jwtService;
@@ -107,26 +108,34 @@ public class UsuarioService {
                 .toList();
     }
 
-    public PropiedadResponse agregarFavorito(Long propiedadId, Usuario usuario) {
-        Propiedad propiedad = propiedadRepository.findById(propiedadId)
-                .orElseThrow(() -> new EntityNotFoundException("Propiedad no encontrada"));
-        
-        usuario.getFavoritos().add(propiedad);
-        usuarioRepository.save(usuario);
-        return propiedadService.mapToResponse(propiedad, usuario);
+    public PublicacionResponse agregarFavorito(Long publicacionId, Usuario usuario) {
+        Usuario attachedUsuario = usuarioRepository.findById(usuario.getId())
+                .orElseThrow(() -> new EntityNotFoundException("Usuario no encontrado"));
+        Publicacion publicacion = publicacionRepository.findById(publicacionId)
+                .orElseThrow(() -> new EntityNotFoundException("Publicacion no encontrada"));
+
+        attachedUsuario.getFavoritos().add(publicacion);
+        usuarioRepository.save(attachedUsuario);
+        return publicacionService.mapToResponse(publicacion, true);
     }
 
-    public void eliminarFavorito(Long propiedadId, Usuario usuario) {
-        Propiedad propiedad = propiedadRepository.findById(propiedadId)
-                .orElseThrow(() -> new EntityNotFoundException("Propiedad no encontrada"));
-        
-        usuario.getFavoritos().remove(propiedad);
-        usuarioRepository.save(usuario);
+    public void eliminarFavorito(Long publicacionId, Usuario usuario) {
+        Usuario attachedUsuario = usuarioRepository.findById(usuario.getId())
+                .orElseThrow(() -> new EntityNotFoundException("Usuario no encontrado"));
+        Publicacion publicacion = publicacionRepository.findById(publicacionId)
+                .orElseThrow(() -> new EntityNotFoundException("Publicacion no encontrada"));
+
+        attachedUsuario.getFavoritos().remove(publicacion);
+        usuarioRepository.save(attachedUsuario);
     }
 
-    public List<PropiedadResponse> obtenerFavoritos(Usuario usuario) {
-        return usuario.getFavoritos().stream()
-                .map(propiedad -> propiedadService.mapToResponse(propiedad, usuario))
-                .collect(Collectors.toList());
+    @Transactional(readOnly = true)
+    public List<PublicacionResponse> obtenerFavoritos(Usuario usuario) {
+        Usuario attachedUsuario = usuarioRepository.findById(usuario.getId())
+                .orElseThrow(() -> new EntityNotFoundException("Usuario no encontrado"));
+
+        return attachedUsuario.getFavoritos().stream()
+                .map(p -> publicacionService.mapToResponse(p, true))
+                .toList();
     }
 }
